--- a/css/style.css
+++ b/css/style.css
@@ -217,10 +217,10 @@ height: 0.8em;
 
 .bas{
 	text-align: center;
-    font-size: 23px;
+    font-size: 1em;
     background-color: #F3EFEB;
     padding: 2em;
-    margin-top: 10em;
+    margin-top: 14em;
     color: black;
     vertical-align: bottom;
 }
