--- a/css/style.css
+++ b/css/style.css
@@ -185,22 +185,23 @@ width: 100%;
 
 .textbloc4{
 	color: orange;
-	font-size: 14pt;
-
+	font-size: 16pt;
+	height: 3em;
 }
-
-.ligneimage{
+.monimage{
 	border: 0;
 	padding: 0;
 	margin: 0;
 	display: block;
 	width: 100%;
+	height: 20em;
 }
 
 .bloc_orange{
 	width: 100%;
 	height: 0.8em;
 	background-color: orange;
+	padding-top: 1em;
 }
 
 .endfile{
@@ -256,26 +257,33 @@ rien = nom de l'emt*/
 	margin-left: 1.5em;
 }
 
-.idpic{
-	border-radius: 195px 195px 195px 195px;
+.id{
+	/*border-radius: 195px 195px 195px 195px;
 -moz-border-radius: 195px 195px 195px 195px;
 -webkit-border-radius: 195px 195px 195px 195px;
-	
+	*/
 	display: block;
 	margin: 0 auto;
+	width: 20em;
+	margin-bottom: 1em;
 }
+
+.titleaboutme{
+	text-align: center;
+	margin-bottom: 2em;
+	font-size: 1.4em;
+}
+
 .textaboutme{
 	font-family: "Arial", sans-serif;
 	font-weight: 200;
-	font-size: 1.5em;
+	font-size: 1.2em;
 	color: black;
 }
 
 
 
-/******************
-	réalisations
-******************/
+/************************************** réalisations **********************************/
 
 .realtitle{
 	margin: 0;
@@ -293,6 +301,101 @@ rien = nom de l'emt*/
 .textreal{
 	text-align: center;
 	display: block;
+}
+
+/*au survol*/
+.ausurvolreal {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    margin: 0;
+}
+
+
+.survolreal {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: .5em;
+    background: #000;
+    background: rgba(0, 0, 0, .75);
+    color: #fff;
+    opacity: 0;
+}
+
+.ausurvolreal:hover img {
+    transform: scale(1.2);
+}
+
+.ausurvolreal:hover .survolreal {
+    opacity: 1;
+}
+}
+
+/********************************** Partenaires ****************************************/
+
+.mespartenaires{
+	padding-bottom: 5em;
+}
+
+.logoimg{ 
+	border: 0;
+	padding: 0;
+	margin: 0;
+	display: block;
+	height: 18em;
+	width : 100%;
+}
+
+.partenairefigure {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    margin: 0;
+}
+
+img, .prestastyle {
+    transition: all .25s ease;
+}
+
+.prestastyle {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: .5em;
+    background: #000;
+    background: rgba(0, 0, 0, .75);
+    color: #fff;
+    opacity: 0;
+}
+
+.partenairefigure:hover img {
+    transform: scale(1.2);
+}
+
+.partenairefigure:hover .prestastyle {
+    opacity: 1;
+}
+
+.titlepartenaire{
+	color: orange;
+}
+
+.textpartenaire{
+
+}
+
+.sitename{
+	color: white;
+}
+
+.sitename:hover{
+	color: white;
+	font-size: 16px;
 }
 
 /******************
