--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ rien = nom de l'emt*/
 
 .titleaboutme{
 	text-align: center;
-	margin-bottom: 2em;
+	margin-bottom: 0.5em;
 	font-size: 1.4em;
 }
 
@@ -279,6 +279,9 @@ rien = nom de l'emt*/
 	font-weight: 200;
 	font-size: 1.2em;
 	color: black;
+	margin: 0 5em;
+	text-align : center;
+	text-align : justify;
 }
 
 
