--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,27 @@
 }
 
 /*Couleurs dimentionnement positionnement des différents blocs*/
-
-html,
+html {
+  height: 100%;
+}
 body {
-    height: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+}
+body {
+	position: relative;
+}
+footer {
+	position: absolute; 
+	bottom: 0; left: 0; right: 0;
 }
 
 .nomargin{
 	margin: 0;
 }
 
+/*Media queries*/
 @media print {
     #menu,
     #footer {
@@ -36,7 +47,7 @@ body {
     }
 }
 
-@media screen and (max-width: 640px) {
+/*@media screen and (max-width: 640px) {
     .bloc {
         display: block;
         clear: both;
@@ -48,7 +59,7 @@ body {
         display: block;
         clear: both;
     }
-}
+}*/
 
 
 /******************
@@ -130,11 +141,17 @@ body {
 ******************/
 #bloc3{
 	background-image:url(../img/p2-background.jpg);
-	background-repeat: no-repeat;
-	height: 60em;
-	width: 100%;
+	background-repeat: no-repeat fixed;
+	margin:0;
+    padding:0;
+	max-width: 100%;
+    height: 60em;
 	background-size: cover;
 }
+#bloc3{:hover { 
+    opacity: 0.9;
+}
+
 
 .textbloc3{
 	margin: 0 auto;
@@ -177,7 +194,7 @@ width: 100%;
 }
 
 #bloc4{
-	height: 15em;
+	height: 30em;
 	background-image:url(../img/p3-paillettegauche.png), url(../img/p3-paillette-droite.png); 
 	background-position: 0% 0%, 100% 0%;
 	background-repeat: no-repeat;	
@@ -420,7 +437,8 @@ img, .prestastyle {
     padding: 2em;
     margin-top: 2em;
     color: black;
-    vertical-align: bottom;
 }
+ 
+ 
 
 
