--- a/admin/css/style_admin.css
+++ b/admin/css/style_admin.css
@@ -18,9 +18,15 @@
 
 html,
 body{
-    height: 100%;
+    position: relative;
 }
-
+footer{
+    position: fixed;
+    margin-top: 1em;
+    bottom: 0; 
+    left: 0; 
+    right: 0;
+}
 .nomargin{
 	margin: 0;
 }
@@ -59,23 +65,26 @@ body{
         top: 0;
         right: -15px;
     }
-
+.realtitle{
+    margin: 0;
+    font-family: "Oswald", sans-serif;
+    font-weight: 400;
+    font-size: 2.7em;
+    text-align: center;
+}
+.align{
+    display: block;
+    text-align: center;
+}
 
 /******************
     footer
 ******************/
-
 .bas{
-    position:fixed;
-    height:30px;
-    width:100%;
     height: 5em;
     text-align: center;
     font-size: 1.2em;
     background-color: #F3EFEB;
     padding: 2em;
-    margin-top: 2em;
     color: black;
-    left:0px;
-    bottom:0px;
 }
