--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,16 @@ body {
   padding: 0;
 }
 body {
-	position: relative;
+	position: absolute;
+	width: 100%;
 }
 footer{
-    position: absolute;
+	width: 100%;
+    position: relative;
     bottom: 0; 
     left: 0; 
     right: 0;
     margin-top: 1em;
-
 }
 
 
@@ -224,7 +225,8 @@ width: 100%;
 }
 
 .endfile{
-	text-align: center
+	text-align: center;
+	margin-bottom: 5em;
 }
 
 /****************************************Parcours****************************************/
