--- a/css/style.css
+++ b/css/style.css
@@ -24,19 +24,16 @@ body {
   padding: 0;
 }
 body {
-	position: absolute;
 	width: 100%;
 }
 footer{
 	width: 100%;
-    position: relative;
     bottom: 0; 
     left: 0; 
     right: 0;
     margin-top: 1em;
+    position: fixed;
 }
-
-
 .nomargin{
 	margin: 0;
 }
@@ -79,14 +76,11 @@ footer{
     background-color: transparent;
     border-color: transparent;
 }
-
-
 /****************************************Acceuil****************************************/
-
 .imghome{
 	height: 146em;
 	width: 100%;
-	background:url(../img/home.png) no-repeat center center;
+	background:url(../img/home-exportation.jpg) no-repeat center center;
   	margin:0;
 	padding:0;
 	-webkit-background-size: cover; /* pour anciens Chrome et Safari */
@@ -198,7 +192,6 @@ width: 100%;
 	background-position: 0% 0%, 100% 0%;
 	background-repeat: no-repeat;	
 }*/
-
 .actua{
 	margin: 2em 3em 2em 3em;
 	text-align: center;
@@ -216,19 +209,16 @@ width: 100%;
 	width: 100%;
 	height: auto;
 }
-
 .bloc_orange{
 	width: 100%;
 	height: 0.8em;
 	background-color: orange;
 	padding-top: 1em;
 }
-
 .endfile{
 	text-align: center;
 	margin-bottom: 5em;
 }
-
 /****************************************Parcours****************************************/
 .lecv{
 	height: 90em;
@@ -247,40 +237,7 @@ width: 100%;
 	margin: 4em 6em;
 	text-align: justify;
 }
-
-
-/****************************************Prestations****************************************/
-.sizemiddle{
-	margin: 7em 0em;
-}
-#prestation{
-	text-align: center;
-}
-.prestapicto{
-	margin-top: 5em;
-}
-.textpresta{
-	font-family: "Raleway", sans-serif;
-	font-weight: 400;
-}
-.titlepresta{
-	font-family: "Oswald",sans-serif;
-	font-weight: 400;
-	font-size: 1.4em;
-	margin-top: 1.5em;
-}
-.bigtitlepresta{
-	margin: 0;
-	font-family: "Oswald", sans-serif;
-	font-weight: 400;
-	font-size: 2.7em;
-}
-.boutonplus{
-	margin-top: 1em;
-}
-
 /**************************************** Présentation ****************************************/
-
 #presentation{
 	text-align: center;
 	margin: 3em 10em;
@@ -313,9 +270,57 @@ width: 100%;
 	text-align : center;
 	text-align : justify;
 }
-
+/****************************************Prestations et démarches****************************************/
+#prestation{
+	text-align: center;
+}
+.bigtitlepresta{
+	margin: 0;
+	font-family: "Oswald", sans-serif;
+	font-weight: 400;
+	font-size: 2.7em;
+}
+.sizemiddle{
+	margin: 6em 0em;
+}
+.prestapicto{
+	margin-top: 2em;
+}
+.titlepresta{
+	font-family: "Oswald",sans-serif;
+	font-weight: 400;
+	font-size: 1.4em;
+	margin-top: 1.5em;
+}
+.textpresta{
+	font-family: "Raleway", sans-serif;
+	font-weight: 400;
+}
+.boutonplus{
+	margin-top: 1em;
+}
+/******************pages vue des sous-prestations et sous-demarche*****************************/
+.titleunderview{
+	margin: 0;
+	font-family: "Oswald", sans-serif;
+	font-weight: 400;
+	font-size: 2.7em;
+	margin-bottom: 0.5em;
+}
+.insideunderview{
+	margin: 1em 0;
+}
+.centerunderview{
+	text-align: center;
+	display: inline-block;
+}
+.textunder{
+	font-family: "Raleway", sans-serif;
+	font-weight: 400;
+	margin-top: 3em;
+	text-align: justify;
+}
 /************************************** réalisations **********************************/
-
 .real{
 	margin: 0;
 	text-align: center;
@@ -377,7 +382,6 @@ width: 100%;
 	margin-left: 2em;
 }
 /********************************** Partenaires ****************************************/
-
 .mespartenaires{
 	margin-bottom: 1em; 
 	text-align: center;
@@ -430,19 +434,15 @@ img, .prestastyle {
 	color: white;
 	font-size: 16px;
 }
-
 /******************
 	contact
 ******************/
 .contact{
 	margin: 8em 10em;
-	
 }
-
 /******************
 	footer
 ******************/
-
 .bas{
 	height: 5em;
 	text-align: center;
